--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@prisma/client": "^6.12.0",
     "@types/react-big-calendar": "^1.16.2",
     "moment": "^2.30.1",
     "next": "14.2.5",
+    "prisma": "^6.12.0",
     "react": "^18",
     "react-big-calendar": "^1.19.4",
     "react-calendar": "^6.0.0",
@@ -29,6 +31,10 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
