feat: implement route protection and role-based access control via Clerk middleware

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/elements": "^0.23.46",
+    "@clerk/nextjs": "^6.27.1",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.12.0",
     "@types/react-big-calendar": "^1.16.2",
